[gd_scene load_steps=4 format=3 uid="uid://bqxvhxqxqxqxr"]

[ext_resource type="Script" path="res://algorithms/MachineLearning/reinforcement_learning/ReinforcementLearning.gd" id="1_script"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.2, 0.2, 0.2, 1)
metallic = 0.8
roughness = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.2, 0.8, 0.2, 1)
emission_enabled = true
emission = Color(0.2, 0.8, 0.2, 1)
emission_energy = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.8, 0.2, 0.2, 1)
emission_enabled = true
emission = Color(0.8, 0.2, 0.2, 1)
emission_energy = 0.3

[node name="ReinforcementLearning" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 15, 15)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 20, 0)
light_energy = 1.5

[node name="Environment" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="EnvironmentGrid" type="Node3D" parent="Environment"]

[node name="EnvironmentLabel" type="CSGBox3D" parent="Environment"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="Agent" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="AgentCore" type="CSGBox3D" parent="Agent"]
size = Vector3(2, 2, 2)
material_override = SubResource("StandardMaterial3D_2")

[node name="AgentLabel" type="CSGBox3D" parent="Agent"]
size = Vector3(2.5, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="LearningAlgorithm" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="AlgorithmCore" type="CSGBox3D" parent="LearningAlgorithm"]
size = Vector3(3, 3, 3)
material_override = SubResource("StandardMaterial3D_2")

[node name="AlgorithmLabel" type="CSGBox3D" parent="LearningAlgorithm"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="PolicyNetwork" type="Node3D" parent="LearningAlgorithm"]

[node name="PolicyCore" type="CSGSphere3D" parent="LearningAlgorithm/PolicyNetwork"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="ValueCore" type="CSGSphere3D" parent="LearningAlgorithm/PolicyNetwork"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="QNetworkCore" type="CSGSphere3D" parent="LearningAlgorithm/PolicyNetwork"]
radius = 0.5
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)
material_override = SubResource("StandardMaterial3D_3")

[node name="RewardSystem" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)

[node name="RewardCore" type="CSGBox3D" parent="RewardSystem"]
size = Vector3(4, 0.2, 2)
material_override = SubResource("StandardMaterial3D_2")

[node name="RewardLabel" type="CSGBox3D" parent="RewardSystem"]
size = Vector3(3, 0.3, 0.3)
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
material_override = SubResource("StandardMaterial3D_1")

[node name="DataFlow" type="Node3D" parent="."]

[node name="FlowParticles" type="Node3D" parent="DataFlow"]

[node name="LearningMetrics" type="Node3D" parent="."]

[node name="RewardMeter" type="Node3D" parent="LearningMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 8, 0)

[node name="RewardBase" type="CSGBox3D" parent="LearningMetrics/RewardMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="RewardIndicator" type="CSGSphere3D" parent="LearningMetrics/RewardMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="EpisodeMeter" type="Node3D" parent="LearningMetrics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 8, 0)

[node name="EpisodeBase" type="CSGBox3D" parent="LearningMetrics/EpisodeMeter"]
size = Vector3(4, 0.2, 1)
material_override = SubResource("StandardMaterial3D_1")

[node name="EpisodeIndicator" type="CSGSphere3D" parent="LearningMetrics/EpisodeMeter"]
radius = 0.3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
material_override = SubResource("StandardMaterial3D_2")

[node name="Grid" type="Node3D" parent="."]

[node name="GridLines" type="Node3D" parent="Grid"]
